# VideoManager

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  application.cpp  application.h  main.cpp
VideoManager/: CMakeLists.txt  VideoCapture.cpp  VideoCapture.h  VideoManager.cpp  VideoManager.h  VideoWriter.cpp  VideoWriter.h  example.txt  utils.h
